builds/kubernetes/temp/deployment.yml
---
# -----------------------------------------------------------------------------
# Deployment for inventory.configuration.api
# -----------------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-api-deployment
  labels:
    app: configuration-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-api
  template:
    metadata:
      labels:
        app: configuration-api
    spec:
      hostAliases:
        - ip: "20.199.123.249"
          hostnames:
          - "inventory.francecentral.cloudapp.azure.com"
      containers:
        - name: configuration-api
          image: aksbootstrap.azurecr.io/dynamicinventory/inventoryconfigurationapi:809
          resources:
            limits:
              memory: 400Mi
              cpu: 500m
          ports:
            - containerPort: 80
        - name: postgres-image
          image: postgres:latest
          resources:
            limits:
              memory: 400Mi
              cpu: 500m
          ports:
            - containerPort: 5432
