builds/kubernetes/temp/service-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: configuration-api-svc
  labels:
    app: configuration-api
spec:
  type: ClusterIP
  selector:
    app: configuration-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
