builds/kubernetes/temp/ingress-ssl.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configuration-api-ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  tls:
  - hosts:
    - inventory.francecentral.cloudapp.azure.com
    secretName: tls-secret16

  rules:
    - host: inventory.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configuration-api-svc
                port:
                  number: 80
