builds/kubernetes/temp/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configuration-api-ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configuration-api-svc
                port:
                  number: 80
